--- a/src/app/master-branch/master-branch.component.css
+++ b/src/app/master-branch/master-branch.component.css
@@ -1,16 +1,9 @@
-h1 {
-  text-align: center;
+h2 {
+  text-align: left;
   margin-bottom: 0;
-  font-size: 3em;
+  font-size: 2em;
   color: #3d5c5c;
   margin-bottom: 0;
-}
-
-.panel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
 }
 
 .button {
@@ -27,4 +20,14 @@ h1 {
   border-bottom: 3px solid #006666;
 }
 
-
+.table {
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  height: 100%;
+  text-align: left;
+  margin-bottom: 0;
+  font-size: 20px;
+  font-family: "Courier New", Courier;
+  color: #3d5c5c;
+}
