--- a/src/app/master-task-list/master-task-list.component.html
+++ b/src/app/master-task-list/master-task-list.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="tasks.length>0">
 
-  <div class="table">
+  <div class="table_master_task">
     <table border="1" width="100%" cellpadding="5">
       <tr>
         <th>Id Задания</th>
