--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="tasks.length>0">
-  <div class="table">
-    <table border="1" width="100%" cellpadding="5">
+  <div class="table_task_list">
+    <table width="100%">
       <tr>
         <th>Id Задания</th>
         <th>Id Мастера</th>
