--- a/src/app/task-list/task-list.component.css
+++ b/src/app/task-list/task-list.component.css
@@ -20,16 +20,85 @@ h2 {
   border-bottom: 3px solid #006666;
 }
 
-.table {
-  display: flex;
-  align-items: left;
-  justify-content: left;
-  height: 100%;
+
+
+table {
+  background: #f5f5f5;
+  box-shadow: inset 0 0px 0 #fff;
+  line-height: 24px;
+  margin: 30px auto;
   text-align: left;
-  margin-bottom: 0;
   font-size: 20px;
   font-family: "Courier New", Courier;
   color: #3d5c5c;
 }
 
+th {
+  background-color: #75A3A3;
+  border-left: 1px solid #d5dede;
+  border-right: 1px solid #d5dede;
+  border-top: 1px solid #d5dede;
+  border-bottom: 1px solid #d5dede;
+  box-shadow: inset 0 0px 0 #999;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px 15px;
+  position: relative;
+  text-shadow: 0 1px 0 #000;
+}
 
+
+th:first-child {
+  border-left: 1px solid #777;
+  box-shadow: inset 1px 1px 0 #999;
+}
+
+th:last-child {
+  box-shadow: inset -1px 1px 0 #999;
+}
+
+td {
+  border-right: 1px solid #d5dede;
+  border-left: 1px solid #d5dede;
+  border-top: 1px solid #d5dede;
+  border-bottom: 1px solid #d5dede;
+  padding: 10px 15px;
+  position: relative;
+  transition: all 300ms;
+}
+
+td:first-child {
+  box-shadow: inset 1px 0 0 #fff;
+}
+
+td:last-child {
+  border-right: 1px solid #e8e8e8;
+  box-shadow: inset -1px 0 0 #fff;
+}
+
+tr:last-of-type td {
+  box-shadow: inset 0 -1px 0 #fff;
+}
+
+tr:last-of-type td:first-child {
+  box-shadow: inset 1px -1px 0 #fff;
+}
+
+tr:last-of-type td:last-child {
+  box-shadow: inset -1px -1px 0 #fff;
+}
+
+tbody:hover td {
+  color: transparent;
+  text-shadow: 0 0 1px #aaa;
+}
+
+tbody:hover tr:hover td {
+  color: #444;
+  text-shadow: 0 1px 0 #e8e8e8;
+}
+
+.table_task_list{
+  position: relative;
+  z-index: 0;
+}
