--- a/src/app/admin-branch/admin-branch.component.css
+++ b/src/app/admin-branch/admin-branch.component.css
@@ -31,3 +31,60 @@ h2 {
   font-family: "Courier New", Courier;
   color: #3d5c5c;
 }
+
+
+.button_select {
+  -moz-box-shadow: 0px 10px 14px -4px #3e7327;
+  -webkit-box-shadow: 0px 10px 14px -4px #3e7327;
+  box-shadow: 0px 10px 14px -4px #3e7327;
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #59b392), color-stop(1, #52b371));
+  background:-moz-linear-gradient(top, #59b392 5%, #52b371 100%);
+  background:-webkit-linear-gradient(top, #59b392 5%, #52b371 100%);
+  background:-o-linear-gradient(top, #59b392 5%, #52b371 100%);
+  background:-ms-linear-gradient(top, #59b392 5%, #52b371 100%);
+  background:linear-gradient(to bottom, #59b392 5%, #52b371 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#59b392', endColorstr='#52b371',GradientType=0);
+  background-color:#59b392;
+  -moz-border-radius:4px;
+  -webkit-border-radius:4px;
+  border-radius:4px;
+  border:1px solid #4b8f29;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:26px;
+  font-weight:bold;
+  padding:15px 76px;
+  text-decoration:none;
+  text-shadow:0px 1px 21px #5b8a3c;
+
+  position: absolute;
+  top: 50%;
+  left: 44%;
+  margin: -125px 0 0 -125px;
+  z-index: 200;
+
+}
+.button_select:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #52b371), color-stop(1, #59b392));
+  background:-moz-linear-gradient(top, #52b371 5%, #59b392 100%);
+  background:-webkit-linear-gradient(top, #52b371 5%, #59b392 100%);
+  background:-o-linear-gradient(top, #52b371 5%, #59b392 100%);
+  background:-ms-linear-gradient(top, #52b371 5%, #59b392 100%);
+  background:linear-gradient(to bottom, #52b371 5%, #59b392 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#52b371', endColorstr='#59b392',GradientType=0);
+  background-color:#52b371;
+  position: absolute;
+  top: 50%;
+  left: 44%;
+  margin: -125px 0 0 -125px;
+  z-index: 200;
+}
+.button_select:active {
+  position: absolute;
+  top: 50%;
+  left: 44%;
+  margin: -125px 0 0 -125px;
+  z-index: 200;
+}
