--- a/src/app/master-list/master-list.component.html
+++ b/src/app/master-list/master-list.component.html
@@ -1,5 +1,5 @@
-<div class="table">
-  <table border="1" width="100%" cellpadding="5">
+
+  <table *ngIf="!selectFlag" width="50%" class="table_focus">
     <tr>
       <th>Id Отдела</th>
       <th>Id Мастера</th>
@@ -19,5 +19,25 @@
 
 
   </table>
-</div>
+
+  <table *ngIf="selectFlag" width="50%" class="table_un_focus">
+    <tr>
+      <th>Id Отдела</th>
+      <th>Id Мастера</th>
+      <th>Имя</th>
+      <th>Фамилия</th>
+      <th> Номер телефона</th>
+    </tr>
+
+
+    <tr *ngFor="let master of selectedMasters" (click)="selectMaster(master)">
+      <td>{{master.departmentId}}</td>
+      <td>{{master.masterId}}</td>
+      <td>{{master.firstName}}</td>
+      <td>{{master.lastName}}</td>
+      <td>{{master.telephonNumber}}</td>
+    </tr>
+
+
+  </table>
 
