--- a/src/app/new-task/new-task.component.css
+++ b/src/app/new-task/new-task.component.css
@@ -30,8 +30,8 @@ h2 {
   font-size: 20px;
   color: #FFF;
   text-decoration: none;
-  background-color: #DDDDDD;
-  border-bottom: 3px solid #006666;
+  background-color: #9eabb2;
+  border-bottom: 3px solid #3d5c5c;
 }
 
 .table {
