--- a/src/app/task-list/task-list.component.css
+++ b/src/app/task-list/task-list.component.css
@@ -22,7 +22,7 @@ h2 {
 
 
 
-table {
+.table_un_focus {
   background: #f5f5f5;
   box-shadow: inset 0 0px 0 #fff;
   line-height: 24px;
@@ -31,6 +31,26 @@ table {
   font-size: 20px;
   font-family: "Courier New", Courier;
   color: #3d5c5c;
+  width: 100%;
+  position: absolute;
+  z-index: 0;
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  filter: blur(10px);
+}
+
+.table_focus {
+  background: #f5f5f5;
+  box-shadow: inset 0 0px 0 #fff;
+  line-height: 24px;
+  margin: 30px auto;
+  text-align: left;
+  font-size: 20px;
+  font-family: "Courier New", Courier;
+  color: #3d5c5c;
+  width: 100%;
+  position: absolute;
+  z-index: 0;
 }
 
 th {
@@ -43,7 +63,7 @@ th {
   color: #fff;
   font-weight: bold;
   padding: 10px 15px;
-  position: relative;
+
   text-shadow: 0 1px 0 #000;
 }
 
@@ -63,7 +83,7 @@ td {
   border-top: 1px solid #d5dede;
   border-bottom: 1px solid #d5dede;
   padding: 10px 15px;
-  position: relative;
+
   transition: all 300ms;
 }
 
@@ -98,7 +118,5 @@ tbody:hover tr:hover td {
   text-shadow: 0 1px 0 #e8e8e8;
 }
 
-.table_task_list{
-  position: relative;
-  z-index: 0;
-}
+
+
