--- a/src/app/master-list/master-list.component.html
+++ b/src/app/master-list/master-list.component.html
@@ -20,7 +20,7 @@
 
   </table>
 
-  <table *ngIf="selectFlag" width="50%" class="table_un_focus">
+ <!-- <table *ngIf="selectFlag" width="50%" class="table_un_focus">
     <tr>
       <th>Id Отдела</th>
       <th>Id Мастера</th>
@@ -39,5 +39,5 @@
     </tr>
 
 
-  </table>
+  </table>-->
 
