--- a/src/app/admin-branch/admin-branch.component.css
+++ b/src/app/admin-branch/admin-branch.component.css
@@ -2,8 +2,20 @@ h2 {
   text-align: left;
   margin-bottom: 0;
   font-size: 2em;
-  color: #3d5c5c;
+  color: #3C6650;
   margin-bottom: 0;
+}
+input {
+  width: 218px;
+  height: 20px;
+  border: 1px solid  #75A3A3;
+  border-radius: 2px;
+}
+.panel{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .button {
@@ -16,7 +28,44 @@ h2 {
   font-size: 20px;
   color: #FFF;
   text-decoration: none;
-  background-color: #75A3A3;
+  background-color: #519171;
+  border-bottom: 3px solid #006666;
+}
+.button_add{
+  position: absolute;
+  height: 70px;
+  width: 250px;
+  top: 100%;
+  left: 50%;
+  margin: -125px 0 0 -125px;
+  z-index: 300;
+  padding: 8px 30px;
+  float: left;
+  border-radius: 4px;
+  font-family: "Courier New", Courier;
+  font-size: 20px;
+  color: #FFF;
+  text-decoration: none;
+  background-color: #519171;
+  border-bottom: 3px solid #006666;
+}
+
+.button_other{
+  position: absolute;
+  height: 80px;
+  width: 250px;
+  top: 70%;
+  left: 50%;
+  margin: -125px 0 0 -125px;
+  z-index: 300;
+  padding: 8px 30px;
+  float: left;
+  border-radius: 4px;
+  font-family: "Courier New", Courier;
+  font-size: 20px;
+  color: #FFF;
+  text-decoration: none;
+  background-color: #519171;
   border-bottom: 3px solid #006666;
 }
 
@@ -32,59 +81,20 @@ h2 {
   color: #3d5c5c;
 }
 
-
-.button_select {
-  -moz-box-shadow: 0px 10px 14px -4px #3e7327;
-  -webkit-box-shadow: 0px 10px 14px -4px #3e7327;
-  box-shadow: 0px 10px 14px -4px #3e7327;
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #59b392), color-stop(1, #52b371));
-  background:-moz-linear-gradient(top, #59b392 5%, #52b371 100%);
-  background:-webkit-linear-gradient(top, #59b392 5%, #52b371 100%);
-  background:-o-linear-gradient(top, #59b392 5%, #52b371 100%);
-  background:-ms-linear-gradient(top, #59b392 5%, #52b371 100%);
-  background:linear-gradient(to bottom, #59b392 5%, #52b371 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#59b392', endColorstr='#52b371',GradientType=0);
-  background-color:#59b392;
-  -moz-border-radius:4px;
-  -webkit-border-radius:4px;
-  border-radius:4px;
-  border:1px solid #4b8f29;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:Arial;
-  font-size:26px;
-  font-weight:bold;
-  padding:15px 76px;
-  text-decoration:none;
-  text-shadow:0px 1px 21px #5b8a3c;
-
+.add_table {
   position: absolute;
-  top: 50%;
-  left: 44%;
+  height: 400px;
+  width: 700px;
+  top: 40%;
+  left: 35%;
   margin: -125px 0 0 -125px;
   z-index: 200;
+  background-color: snow;
+  border: solid 5px #3C6650;
+  border-radius: 8px;
 
 }
-.button_select:hover {
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #52b371), color-stop(1, #59b392));
-  background:-moz-linear-gradient(top, #52b371 5%, #59b392 100%);
-  background:-webkit-linear-gradient(top, #52b371 5%, #59b392 100%);
-  background:-o-linear-gradient(top, #52b371 5%, #59b392 100%);
-  background:-ms-linear-gradient(top, #52b371 5%, #59b392 100%);
-  background:linear-gradient(to bottom, #52b371 5%, #59b392 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#52b371', endColorstr='#59b392',GradientType=0);
-  background-color:#52b371;
-  position: absolute;
-  top: 50%;
-  left: 44%;
-  margin: -125px 0 0 -125px;
-  z-index: 200;
-}
-.button_select:active {
-  position: absolute;
-  top: 50%;
-  left: 44%;
-  margin: -125px 0 0 -125px;
-  z-index: 200;
+
+.text{
+  text-align: center;
 }
