--- a/src/app/master-list/master-list.component.css
+++ b/src/app/master-list/master-list.component.css
@@ -2,7 +2,7 @@ h2 {
   text-align: left;
   margin-bottom: 0;
   font-size: 2em;
-  color: #3d5c5c;
+  color: #3C6650;
   margin-bottom: 0;
 }
 
@@ -16,7 +16,7 @@ h2 {
   font-size: 20px;
   color: #FFF;
   text-decoration: none;
-  background-color: #75A3A3;
+  background-color: #519171;
   border-bottom: 3px solid #006666;
 }
 
@@ -54,11 +54,8 @@ h2 {
 }
 
 th {
-  background-color: #75A3A3;
-  border-left: 1px solid #d5dede;
-  border-right: 1px solid #d5dede;
-  border-top: 1px solid #d5dede;
-  border-bottom: 1px solid #d5dede;
+  background-color: #519171;
+
   box-shadow: inset 0 0px 0 #999;
   color: #fff;
   font-weight: bold;
@@ -78,10 +75,6 @@ th:last-child {
 }
 
 td {
-  border-right: 1px solid #d5dede;
-  border-left: 1px solid #d5dede;
-  border-top: 1px solid #d5dede;
-  border-bottom: 1px solid #d5dede;
   padding: 10px 15px;
 
   transition: all 300ms;
@@ -116,6 +109,7 @@ tbody:hover td {
 tbody:hover tr:hover td {
   color: #444;
   text-shadow: 0 1px 0 #e8e8e8;
+  background: #94B6A4; /* Цвет фона при наведении */
 }
 
 
