--- a/src/app/new-task/new-task.component.css
+++ b/src/app/new-task/new-task.component.css
@@ -2,7 +2,7 @@ h2 {
   text-align: left;
   margin-bottom: 0;
   font-size: 2em;
-  color: #3d5c5c;
+  color: #3C6650;
   margin-bottom: 0;
 }
 
@@ -16,7 +16,7 @@ h2 {
   font-size: 20px;
   color: #FFF;
   text-decoration: none;
-  background-color: #75A3A3;
+  background-color: #519171;
   border-bottom: 3px solid #006666;
 }
 
