--- a/src/app/new-task/new-task.component.css
+++ b/src/app/new-task/new-task.component.css
@@ -19,7 +19,9 @@ h2 {
   background-color: #519171;
   border-bottom: 3px solid #006666;
 }
-
+.button:hover{
+  background-color: #3C6650;
+}
 .button_ {
   position: relative;
   padding: 8px 30px;
