--- a/src/app/master-branch/master-branch.component.css
+++ b/src/app/master-branch/master-branch.component.css
@@ -56,3 +56,53 @@ input {
 .text{
   text-align: center;
 }
+
+.button_add{
+  position: absolute;
+  height: 70px;
+  width: 250px;
+  top: 60%;
+  left: 70%;
+  margin: -125px 0 0 -125px;
+  z-index: 300;
+  padding: 8px 30px;
+  float: left;
+  border-radius: 4px;
+  font-family: "Courier New", Courier;
+  font-size: 20px;
+  color: #FFF;
+  text-decoration: none;
+  background-color: #519171;
+  border-bottom: 3px solid #006666;
+}
+
+.button_other{
+  position: absolute;
+  height: 70px;
+  width: 250px;
+  top: 60%;
+  left: 30%;
+  margin: -125px 0 0 -125px;
+  z-index: 300;
+  padding: 8px 30px;
+  float: left;
+  border-radius: 4px;
+  font-family: "Courier New", Courier;
+  font-size: 20px;
+  color: #FFF;
+  text-decoration: none;
+  background-color: #519171;
+  border-bottom: 3px solid #006666;
+}
+
+.button_add:hover{
+    background-color: #3C6650;
+}
+
+.button_other:hover{
+  background-color: #3C6650;
+}
+
+.button:hover{
+  background-color: #3C6650;
+}
