--- a/src/app/master-task-list/master-task-list.component.css
+++ b/src/app/master-task-list/master-task-list.component.css
@@ -20,9 +20,12 @@ h2 {
   border-bottom: 3px solid #006666;
 }
 
+.button:hover{
+  background-color: #3C6650;
+}
 
 
-table {
+.table_un_focus {
   background: #f5f5f5;
   box-shadow: inset 0 0px 0 #fff;
   line-height: 24px;
@@ -33,6 +36,24 @@ table {
   color: #3d5c5c;
   width: 100%;
   position: absolute;
+  z-index: 0;
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  filter: blur(10px);
+}
+
+.table_focus {
+  background: #f5f5f5;
+  box-shadow: inset 0 0px 0 #fff;
+  line-height: 24px;
+  margin: 30px auto;
+  text-align: left;
+  font-size: 20px;
+  font-family: "Courier New", Courier;
+  color: #3d5c5c;
+  width: 100%;
+  position: absolute;
+  z-index: 0;
 }
 
 th {
@@ -91,6 +112,8 @@ tbody:hover tr:hover td {
   color: #444;
   text-shadow: 0 1px 0 #e8e8e8;
   background: #94B6A4; /* Цвет фона при наведении */
+
 }
+
 
 
