--- a/src/app/master-task-list/master-task-list.component.html
+++ b/src/app/master-task-list/master-task-list.component.html
@@ -1,5 +1,27 @@
 
-    <table *ngIf="tasks.length>0" border="1" width="100%" >
+    <table *ngIf="tasks.length>0 && selectFlag" class = "table_un_focus">
+      <tr>
+        <th>Id Задания</th>
+        <th>Id Мастера</th>
+        <th>Текст Заявки</th>
+        <th>Номер комнаты</th>
+        <th>email</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+      </tr>
+
+      <tr *ngFor="let task of tasks" (click)="selectTask(task)">
+        <td>{{task.caseId}}</td>
+        <td>{{task.masterId}}</td>
+        <td>{{task.caseText}}</td>
+        <td>{{task.roomNumber}}</td>
+        <td>{{task.userEmail}}</td>
+        <td>{{task.userFirstName}}</td>
+        <td>{{task.userLastName}}</td>
+      </tr>
+    </table>
+
+    <table *ngIf="tasks.length>0 && !selectFlag"  class = "table_focus">
       <tr>
         <th>Id Задания</th>
         <th>Id Мастера</th>
