--- a/src/app/master-list/master-list.component.html
+++ b/src/app/master-list/master-list.component.html
@@ -1,4 +1,4 @@
-
+<div class="master_list">
   <table *ngIf="!selectFlag" width="50%" class="table_focus">
     <tr>
       <th>Id Отдела</th>
@@ -20,24 +20,5 @@
 
   </table>
 
- <!-- <table *ngIf="selectFlag" width="50%" class="table_un_focus">
-    <tr>
-      <th>Id Отдела</th>
-      <th>Id Мастера</th>
-      <th>Имя</th>
-      <th>Фамилия</th>
-      <th> Номер телефона</th>
-    </tr>
-
-
-    <tr *ngFor="let master of selectedMasters" (click)="selectMaster(master)">
-      <td>{{master.departmentId}}</td>
-      <td>{{master.masterId}}</td>
-      <td>{{master.firstName}}</td>
-      <td>{{master.lastName}}</td>
-      <td>{{master.telephonNumber}}</td>
-    </tr>
-
-
-  </table>-->
+</div>
 
