--- a/src/app/new-master/new-master.component.html
+++ b/src/app/new-master/new-master.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!newMasterAddFlag">
+<div *ngIf="!newMasterAddFlag" class="new_master">
   <h2>Новый мастер</h2>
   <form (ngSubmit)="onSubmit(master)" #loginForm="ngForm">
     <table class="table">
