--- a/src/app/new-task/new-task.component.html
+++ b/src/app/new-task/new-task.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!newTaskAddFlag">
+<div *ngIf="!newTaskAddFlag" class="new_task">
   <h2>Новая Заявка</h2>
  <form (ngSubmit)="onSubmit(task)" #loginForm="ngForm">
   <div class="table">
