--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,23 @@
 <h1>Ремонт и Исцеление!</h1>
-<div class="panel">
+<!--<div class="panel">
   <div>
     <button class="button" (click)="addTask()">Оставить новую заявку</button>
     <button class="button" (click)="adminEnter()">Вход для Администратора</button>
-    <button class="button" (click)="masterEnter()">Вход для Мастера</button><!--
-    <button class="button" (click)="test()">test</button>-->
+    <button class="button" (click)="masterEnter()">Вход для Мастера</button>&lt;!&ndash;
+    <button class="button" (click)="test()">test</button>&ndash;&gt;
     <br><br>
   </div>
+</div>-->
+
+<div class="panel">
+<nav>
+  <a routerLink="/newtask">Новая Заявка</a>
+  <a routerLink="/adminbranch">Вход для Администратора</a>
+  <a routerLink="/masterbranch">Вход для Мастера</a>
+</nav>
+<router-outlet></router-outlet>
 </div>
+<!--
 <div *ngIf="addTaskFlag && addTaskChangeFlag">
   <app-new-task></app-new-task>
 </div>
@@ -36,3 +46,4 @@
 </div>
 
 
+-->
