--- a/src/app/master-branch/master-branch.component.html
+++ b/src/app/master-branch/master-branch.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!masterVerify">
+<div *ngIf="!masterVerify" class="master_verify">
   <h2>Введите данные мастера</h2>
   <div class="table">
     <table>
@@ -16,31 +16,31 @@
     </table>
   </div>
 </div>
-<div *ngIf="masterVerify && deleteTaskFlag">
-  <app-master-task-list (taskSelect)="taskSelect($event)" [master]="masterVerify" ></app-master-task-list>
+<div *ngIf="masterVerify && deleteTaskFlag" class="master_verify">
+  <app-master-task-list (taskSelect)="taskSelect($event)" [master]="masterVerify"></app-master-task-list>
   <br>
   <div *ngIf="selectedTask">
-       <div class="add_table">
+    <div class="add_table">
       <h2 class="text">Вы уверены, что задание выполнено?</h2>
       <button class="button_add" (click)="deleteTask(selectedTask)">Задание выполнено</button>
       <button class="button_other" (click)="deleteTaskCheck()">Выбрать другое задание</button>
     </div>
   </div>
 </div>
-<div *ngIf="masterVerify && !deleteTaskFlag">
-  <app-master-task-list (taskSelect)="taskSelect($event)" [master]="masterVerify" ></app-master-task-list>
+<div *ngIf="masterVerify && !deleteTaskFlag" class="master_verify">
+  <app-master-task-list (taskSelect)="taskSelect($event)" [master]="masterVerify"></app-master-task-list>
   <br>
   <div *ngIf="selectedTask">
-     <div class="add_table">
+    <div class="add_table">
       <h2 class="text">Вы уверены, что задание выполнено?</h2>
-       <button class="button_add" (click)="deleteTask(selectedTask)">Задание выполнено</button>
-       <button class="button_other" (click)="deleteTaskCheck()">Выбрать другое задание</button>
+      <button class="button_add" (click)="deleteTask(selectedTask)">Задание выполнено</button>
+      <button class="button_other" (click)="deleteTaskCheck()">Выбрать другое задание</button>
     </div>
 
   </div>
 </div>
 
 
-<div *ngIf="!loginVerify && masterCheckFlag">
+<div *ngIf="!loginVerify && masterCheckFlag" class="master_verify_false">
   <h2>Введены неверные данные</h2>
 </div>
