--- a/src/app/master-list/master-list.component.css
+++ b/src/app/master-list/master-list.component.css
@@ -20,10 +20,9 @@ h2 {
   border-bottom: 3px solid #006666;
 }
 
-.button:hover{
+.button:hover {
   background-color: #3C6650;
 }
-
 
 .table_un_focus {
   background: #f5f5f5;
@@ -66,7 +65,6 @@ th {
 
   text-shadow: 0 1px 0 #000;
 }
-
 
 th:first-child {
   border-left: 1px solid #777;
@@ -115,4 +113,8 @@ tbody:hover tr:hover td {
   background: #94B6A4; /* Цвет фона при наведении */
 }
 
-
+.master_list {
+  position: absolute;
+  top: 25%;
+  left: 23%;
+}
