--- a/src/app/master-task-list/master-task-list.component.css
+++ b/src/app/master-task-list/master-task-list.component.css
@@ -20,10 +20,9 @@ h2 {
   border-bottom: 3px solid #006666;
 }
 
-.button:hover{
+.button:hover {
   background-color: #3C6650;
 }
-
 
 .table_un_focus {
   background: #f5f5f5;
@@ -65,7 +64,6 @@ th {
 
   text-shadow: 0 1px 0 #000;
 }
-
 
 th:first-child {
   border-left: 1px solid #777;
@@ -115,5 +113,10 @@ tbody:hover tr:hover td {
 
 }
 
+.task_list {
+  position: relative;
+  top: 30%;
+  left: 0%;
+}
 
 
