--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,30 +1,6 @@
-
-
-    <table *ngIf="tasks.length>0 && selectFlag"  width="100%"  class="table_un_focus">
+    <table *ngIf="tasks.length > 0"  width="100%"  [ngClass]="{'table_un_focus': selectFlag, 'table_focus': !selectFlag}" class="task_list">
       <tr>
         <th>Id Задания!</th>
-        <th>Id Мастера</th>
-        <th>Текст Заявки</th>
-        <th>Номер комнаты</th>
-        <th>email</th>
-        <th>Имя</th>
-        <th>Фамилия</th>
-      </tr>
-
-      <tr *ngFor="let task of tasks" (click)="selectTask(task)" >
-        <td>{{task.caseId}}</td>
-        <td>{{task.masterId}}</td>
-        <td>{{task.caseText}}</td>
-        <td>{{task.roomNumber}}</td>
-        <td>{{task.userEmail}}</td>
-        <td>{{task.userFirstName}}</td>
-        <td>{{task.userLastName}}</td>
-      </tr>
-    </table>
-
-    <table *ngIf="tasks.length>0 && !selectFlag"  width="100%" class="table_focus">
-      <tr>
-        <th>Id Задания</th>
         <th>Id Мастера</th>
         <th>Текст Заявки</th>
         <th>Номер комнаты</th>
